[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/level_button.gd" type="Script" id=1]

[node name="main" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
level = 0

[node name="Button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_right = 100.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


